--- a/src/components/Layout/MainHeader.module.css
+++ b/src/components/Layout/MainHeader.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 5rem;
-  background-color: #044599;
+  background-color: #000000;
   padding: 0 10%;
 }
 
@@ -16,7 +16,7 @@
   padding: 0;
   margin: 0;
   align-items: center;
-  justify-content: center;
+  justify-content:space-between;
 }
 
 .header li {
@@ -29,8 +29,7 @@
   text-decoration: none;
 }
 
-.header a:hover,
-.header a:active,
+/* .header a:hover, */
 .header a.active {
   color: #95bcf0;
   padding-bottom: 0.25rem;
