--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -5,11 +5,10 @@
   rgba(5, 5, 5, 0.8),
    rgba(5, 5, 5, 0.8)),
    url('https://img.wallpapersafari.com/desktop/1920/1080/95/88/W9ezN3.jpg');
-
   background-size: cover;
   background-position: top;
   position: relative;
-  margin-top: -72px;
+
 }
 
 .text-box {
@@ -38,6 +37,7 @@
   color: #faebd7;
   text-shadow: 0 0 0 #faebd7;
   -webkit-animation: loading 1s ease-in-out infinite alternate;
+  animation: loading 1s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes loading {
@@ -57,45 +57,58 @@
 
 .loader span:nth-child(1) {
   -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
 }
 .loader span:nth-child(3) {
   -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
 }
 .loader span:nth-child(5) {
-  -webkit-animation-name: loading;
   -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 .loader span:nth-child(7) {
   -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
 .loader span:nth-child(9) {
   -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
 }
 .loader span:nth-child(11) {
   -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 .loader span:nth-child(16) {
   -webkit-animation-delay: 0.7s;
+  animation-delay: 0.7s;
 }
 .loader span:nth-child(18) {
   -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
 }
 
 .loader span:nth-child(20) {
   -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
 }
 .loader span:nth-child(22) {
   -webkit-animation-delay: 1s;
+  animation-delay: 1s;
 }
 .loader span:nth-child(27) {
   -webkit-animation-delay: 1.1s;
+  animation-delay: 1.1s;
 }
 .loader span:nth-child(29) {
   -webkit-animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 .loader span:nth-child(31) {
   -webkit-animation-delay: 1.3s;
+  animation-delay: 1.3s;
 }
 .loader span:nth-child(33) {
   -webkit-animation-delay: 1.4s;
+  animation-delay: 1.4s;
 }
